--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/vercel": "^1.13.0",
     "@tabler/icons-react": "^2.3.0",
     "@vercel/node": "^2.9.5",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
